# espanol-encuentro

./: README.md  example.py  pyproject.toml  words.yaml
.github/workflows/: python-package.yaml
data/: words.yaml
sample_words/: aguja.json  asco.json  borrar.json  celos.json  llover.json  respeto.json  superar.json
src/espanol_encuentro/: __main__.py  constants.py  entry.py  operations.py
src/espanol_encuentro/cli/: __init__.py
tests/: __init__.py  test_entry.py  test_from_command_line.py
tests/example_words/: bebida.json  comer.json  comida.json  encerrar.json  esperar.json
words/: aguja.json  apagar.json  apagar.yaml  araña.json  asco.json  asco.yaml  borrar.json  borrar.yaml  celos.json  celoso.json  celoso.yaml  encender.json  encender.yaml  encerrar.json  encerrar.yaml  estación.json  estación.yaml  granja.json  granja.yaml  granjero.json  granjero.yaml  llover.json  llover.yaml  lluvia.json  lluvia.yaml  mango.json  pastor.json  pastor.yaml  realizado.json  realizado.yaml  respeto.json  respeto.yaml  superar.json
words_old/: aguja.yaml  araña.yaml  celos.yaml  respeto.yaml  superar.yaml
