[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espanol-encuentro"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Luke Chapman", email = "lrrchapman@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "click>=8.1",
]

[project.urls]
Documentation = "https://github.com/luke-chapman/espanol-encuentro#readme"
Issues = "https://github.com/luke-chapman/espanol-encuentro/issues"
Source = "https://github.com/luke-chapman/espanol-encuentro"

[project.scripts]
espanol-encuentro = "espanol_encuentro.cli:espanol_encuentro"
ee = "espanol_encuentro.cli:espanol_encuentro"

[tool.hatch.version]
path = "src/espanol_encuentro/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/espanol_encuentro tests}"
