[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espanol-encuentro"
dynamic = ["version"]
description = 'Build your own Spanish dictionary'
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Luke Chapman", email = "lrrchapman@gmail.com" },
]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "click>=8.1",
]

[project.urls]
Documentation = "https://github.com/luke-chapman/espanol-encuentro#readme"
Issues = "https://github.com/luke-chapman/espanol-encuentro/issues"
Source = "https://github.com/luke-chapman/espanol-encuentro"

[project.scripts]
espanol-encuentro = "espanol_encuentro.__main__:main"
ee = "espanol_encuentro.__main__:main"

[tool.hatch.version]
path = "src/espanol_encuentro/__about__.py"

[tool.hatch.envs.default.scripts]
lint = [
  "ruff check",
  "mypy --install-types --non-interactive ."
]
format = "ruff check --fix --unsafe-fixes"

[tool.hatch.envs.default]
dependencies = [
  "mypy>=1.0.0",
  "ruff>=0.5.6",
  "black"
]

[tool.ruff]
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "C4",
  "COM",
  "E",
  "ERA",
  "F",
  "I",
  "N",
  "PTH",
  "RUF",
  "W",
  "UP",
]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
