[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espanol-encuentro"
dynamic = ["version"]
description = 'Build your own Spanish dictionary'
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Luke Chapman", email = "lrrchapman@gmail.com" },
]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.urls]
Documentation = "https://github.com/luke-chapman/espanol-encuentro#readme"
Issues = "https://github.com/luke-chapman/espanol-encuentro/issues"
Source = "https://github.com/luke-chapman/espanol-encuentro"

[project.scripts]
espanol-encuentro = "espanol_encuentro.__main__:main"
ee = "espanol_encuentro.__main__:main"

[tool.hatch.version]
path = "src/espanol_encuentro/__about__.py"

[tool.hatch.envs.default.scripts]
lint = [
  "ruff check",
  "mypy --install-types --non-interactive ."
]
format = [
  "black src tests",
  "ruff check --fix --unsafe-fixes"
]
test = "pytest"

[tool.hatch.envs.default]
dependencies = [
  "black>=24.8.0",
  "mypy>=1.0.0",
  "pytest>=8.3.2",
  "ruff>=0.5.6",
]

[tool.ruff]
lint.select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ["py312"]
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.12"
